# mercor-sre

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt  run_local.py
.elasticsearch/_state/: _1d.cfe  _1d.cfs  _1d.si  _1d_1.liv  _1e.cfe  _1e.cfs  _1e.si  _1e_2.liv  _1g.cfe  _1g.cfs  _1g.si  _1h.cfe  _1h.cfs  _1h.si  _1i.cfe  _1i.cfs  _1i.si  node-0.st  segments_1m
.elasticsearch/snapshot_cache/: segments_1
.logs/: market-bridge.jsonl
.loki/chunks/: loki_cluster_seed.json
.loki/tsdb-shipper-active/uploader/: name
.loki/wal/: 00000013  00000014
.loki/wal/checkpoint.000012/: 00000000
all-in-one/: Dockerfile  README.md  supervisord.conf
all-in-one/elasticsearch/: elasticsearch.yml
all-in-one/filebeat/: filebeat.yml
all-in-one/grafana/dashboards/: 10122_rev1.json  14191_rev1.json  2387_rev4.json  docker-latency-drilldown.json
all-in-one/kafka/: server.properties
all-in-one/prometheus/: prometheus.yml
all-in-one/promtail/: config.yml
all-in-one/scripts/: influx-init.sh  start-kafka.sh  start-prometheus.sh
data-generator/: Dockerfile  README.md  app.py  elasticsearch_exporter_generator.py  kafka_exporter_generator.py  requirements.txt
docker/filebeat/: filebeat.yml
docker/grafana/dashboards/: logs-observability.json  test-stack-overview.json
docker/prometheus/: prometheus.yml
docker/promtail/: config.yml
scripts/: run.sh
src/kraken_kafka_bridge/: config.py  influx_writer.py  kafka_producer.py  kraken_ws.py  logging_setup.py  main.py
(+37 files in other folders)
